# MyTona_test_second_part

./: CMakeLists.txt  MyTonaTest  README.md  Task.cpp  Task.h  config.h  main.cpp
Task_1/: Task_1.cpp  Task_1.h
Task_2/: Task_2.cpp  Task_2.h
Task_3/: Task_3.cpp  Task_3.h
Task_3/src/: List.h
Task_4/: Task_4.cpp  Task_4.h  input.txt
Task_5/: Point2d.h  Task_5.cpp  Task_5.h
